terraform/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block = "10.0.0.0/16"
  instance_tenancy = "default"
  enable_dns_hostnames = true
}


resource "aws_subnet" "sn1" {
  cidr_block = "10.0.1.0/24"
  vpc_id = aws_vpc.vpc.id
  availability_zone = "us-east-1a"
  map_public_ip_on_launch = true
}

resource "aws_subnet" "sn2" {
  cidr_block = "10.0.2.0/24"
  vpc_id = aws_vpc.vpc.id
  availability_zone = "us-east-1b"
  map_public_ip_on_launch = true
}

resource "aws_subnet" "sn3" {
  cidr_block = "10.0.3.0/24"
  vpc_id = aws_vpc.vpc.id
  availability_zone = "us-east-1c"
  map_public_ip_on_launch = true
}

resource "aws_security_group" "sg" {
  name = "sg"
  vpc_id = aws_vpc.vpc.id


  ingress  {
    cidr_blocks = [ "0.0.0.0/0" ]
    description = "https"
    from_port = 443
    protocol = "tcp"
    to_port = 443
  } 

  ingress  {
    cidr_blocks = [ "0.0.0.0/0" ]
    description = "http"
    from_port = 80
    protocol = "tcp"
    to_port = 80
  } 

  egress  {
    cidr_blocks = [ "0.0.0.0/0" ]
    from_port = 0
    protocol = "-1"
    to_port = 0
  } 


}
